--- a/index.html.html
+++ b/index.html.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="jspsych/dist/jspsych.js"></script>
-    <link href="jspsych/dist/jspsych.css" rel="stylesheet" type="text/css" />
+    <script src="jspsych.js"></script>
+    <link href="jspsych.css" rel="stylesheet" type="text/css" />
     <style>
       body {
         text-align: center;
