--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     </style>
   </head>
   <body>
-    <!-- Video element -->
-    <video id="myVideo" src="Animation video.mp4" controls></video>
 
-    <!-- Audio element -->
+    <video id="myVideo" src="Animation Video.mp4" controls></video>
+
     <audio id="myAudio" src="Twinkle_original.mp3" loop></audio>
 
     <br />
