--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <video id="myVideo" src="Animation Video.mp4" controls></video>
 
-    <audio id="myAudio" src="Twinkle_gap_+3ST.mp3" loop></audio>
+    <audio id="myAudio" src="Twinkle_original.mp3" loop></audio>
 
     <br />
     <button onclick="playMedia()">Play Video + Audio</button>
