--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         padding-top: 50px;
       }
       video {
-        width: 700px;
+        width: 1000px;
         margin-bottom: 20px;
       }
     </style>
@@ -18,7 +18,7 @@
 
     <video id="myVideo" src="Animation Video.mp4" controls></video>
 
-    <audio id="myAudio" src="Twinkle_gap_+3ST.mp3" loop></audio>
+    <audio id="myAudio" src="Twinkle_gap_+3ST.mp3"></audio>
 
     <br />
     <button onclick="playMedia()">Play Video + Audio</button>
