--- a/index.html
+++ b/index.html
@@ -16,22 +16,31 @@
   </head>
   <body>
 
-    <video id="myVideo" src="Animation Video.mp4" controls></video>
-
-    <audio id="myAudio" src="Twinkle_gap_+3ST.mp3"></audio>
+    <video id="myVideo" src="Animation Video.mp4" controls playsinline></video>
+    <audio id="myAudio"></audio>
 
     <br />
-    <button onclick="playMedia()">Play Video + Audio</button>
+    <button onclick="loadAndPlay()">Play Video + Audio from CSV</button>
 
     <script>
-      function playMedia() {
-        const video = document.getElementById("myVideo");
+      async function loadAndPlay() {
         const audio = document.getElementById("myAudio");
+        const video = document.getElementById("myVideo");
 
-        // Start both media
-        Promise.all([video.play(), audio.play()]).catch(function (e) {
-          console.log("Playback failed:", e);
-        });
+        try {
+          const response = await fetch("audio_files.csv");
+          const text = await response.text();
+
+          const lines = text.trim().split("\n");
+          const firstAudio = lines[1].trim(); 
+
+          audio.src = firstAudio;
+
+          await audio.play();
+          await video.play();
+        } catch (error) {
+          console.error("Error loading audio from CSV:", error);
+        }
       }
     </script>
   </body>
