--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link href="jspsych/dist/jspsych.css" rel="stylesheet" type="text/css" />
     <style>
       body {
-
+        text-align: center;
+        padding-top: 50px;
+      }
+      video {
+        width: 1500px;
+        margin-bottom: 20px;
+      }
+    </style>
+  </head>
+  <body>
     <video id="myVideo" src="Animation Video.mp4" controls></video>
     <audio id="myAudio" controls></audio>
     <br />
@@ -15,12 +24,13 @@
       let audioFiles = [];
       let currentAudioIndex = 0;
 
+      // Load CSV
       fetch('audio_files.csv')
         .then(response => response.text())
         .then(csv => {
           audioFiles = csv.trim().split('\n');
           if (audioFiles.length > 0) {
-      
+            // Load first audio
             document.getElementById('myAudio').src = audioFiles[0];
           }
         })
@@ -30,10 +40,12 @@
         const video = document.getElementById("myVideo");
         const audio = document.getElementById("myAudio");
 
+        // Load the current audio file (in case it changed)
         if (audioFiles.length > 0) {
           audio.src = audioFiles[currentAudioIndex];
         }
 
+        // Play both media
         Promise.all([video.play(), audio.play()]).catch(function (e) {
           console.log("Playback failed:", e);
         });
