--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ margin-bottom: 20px;
 <button id="playButton">Play Video + Audio from CSV</button>
 
 <script>
-document.getElementById("playButton").addEventListener("click", async function ()) {
+document.getElementById("playButton").addEventListener("click", async function () {
 const audio = document.getElementById("myAudio");
 const video = document.getElementById("myVideo");
 
