--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       background-color: #f0f0f0;
     }
     #visual-container {
-      width: 1200px;
+      width: 800px;
       height: 450px;
       margin: auto;
       background-color: white;
@@ -30,9 +30,9 @@
 <div id="visual-container">
   <img id="stillframe1" src="stillframe1.png" />
   <img id="stillframe2" src="stillframe2.png" />
-  <video id="video1" src="video1.mp4" playsinline preload="auto"></video>
-  <video id="gapVideo" src="gapVideo.mp4" playsinline preload="auto"></video>
-  <video id="video2" src="video2.mp4" playsinline preload="auto"></video>
+  <video id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
+  <video id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
+  <video id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
 </div>
 
 <audio id="myAudio" hidden preload="auto"></audio>
@@ -47,6 +47,14 @@ document.getElementById("playButton").addEventListener("click", async function (
   const v1 = document.getElementById("video1");
   const vGap = document.getElementById("gapVideo");
   const v2 = document.getElementById("video2");
+
+  const visuals = [
+    { el: still1, start: 0, end: 0 },     // to be updated
+    { el: v1, start: 0, end: 0 },
+    { el: vGap, start: 0, end: 0 },
+    { el: v2, start: 0, end: 0 },
+    { el: still2, start: 0, end: 0 }
+  ];
 
   function hideAll() {
     [still1, still2, v1, vGap, v2].forEach(el => {
@@ -80,62 +88,64 @@ document.getElementById("playButton").addEventListener("click", async function (
     const totalSec = parseFloat(total);
 
     const preGapSec = (totalSec - originalSec - gapSec) / 2;
-    const postGapSec = preGapSec;
     const video1Sec = testSec / 2;
     const video2Sec = testSec / 2;
+    const postGapSec = preGapSec;
 
+    // Set visual segment timings
+    visuals[0].start = 0;
+    visuals[0].end = preGapSec;
+
+    visuals[1].start = visuals[0].end;
+    visuals[1].end = visuals[1].start + video1Sec;
+
+    visuals[2].start = visuals[1].end;
+    visuals[2].end = visuals[2].start + gapSec;
+
+    visuals[3].start = visuals[2].end;
+    visuals[3].end = visuals[3].start + video2Sec;
+
+    visuals[4].start = visuals[3].end;
+    visuals[4].end = visuals[4].start + postGapSec;
+
+    // Prepare audio
     audio.src = audioURL;
-
     await new Promise((resolve, reject) => {
       audio.oncanplaythrough = resolve;
       audio.onerror = () => reject("Failed to load audio file: " + audioURL);
     });
 
-    await audio.play();
+    // Sync loop
+    let currentVisual = null;
+    function updateVisuals() {
+      const t = audio.currentTime;
 
-    // 1. Pre-gap: show stillframe1
-    hideAll();
-    still1.style.display = "block";
-
-    setTimeout(() => {
-      // 2. Video 1
-      hideAll();
-      v1.style.display = "block";
-      v1.play();
-
-      setTimeout(() => {
-        // 3. Gap Video
-        hideAll();
-        vGap.style.display = "block";
-        vGap.play();
-
-        setTimeout(() => {
-          // 4. Video 2
-          hideAll();
-          v2.style.display = "block";
-          v2.play();
-
-          setTimeout(() => {
-            // 5. Post-gap stillframe2
+      for (const v of visuals) {
+        if (t >= v.start && t < v.end) {
+          if (currentVisual !== v.el) {
             hideAll();
-            still2.style.display = "block";
+            v.el.style.display = "block";
+            if (v.el.tagName === "VIDEO") v.el.play();
+            currentVisual = v.el;
+          }
+          break;
+        }
+      }
 
-            setTimeout(() => {
-              hideAll(); // All done
-              console.log("Stimulus sequence complete.");
-            }, postGapSec * 1000);
+      if (t < totalSec) {
+        requestAnimationFrame(updateVisuals);
+      } else {
+        hideAll(); // End
+        console.log("Sequence done.");
+      }
+    }
 
-          }, video2Sec * 1000);
-
-        }, gapSec * 1000);
-
-      }, video1Sec * 1000);
-
-    }, preGapSec * 1000);
+    await audio.play();
+    updateVisuals();
 
   } catch (err) {
-    console.error("Playback Error:", err);
-    alert("Failed to play media. Check the console for details.");
+    console.error("Sync error:", err);
+    alert("Failed to play synced media. Check console for details.");
   }
 });
 </script>
