--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <div id="visual-container">
   <img id="stillframe1" src="stillframe1.png" />
+  <img id="gapStillframe" src="gapStillframe.png" />
   <img id="stillframe2" src="stillframe2.png" />
   <video id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
   <video id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
@@ -44,20 +45,22 @@ document.getElementById("playButton").addEventListener("click", async function (
   const audio = document.getElementById("myAudio");
   const still1 = document.getElementById("stillframe1");
   const still2 = document.getElementById("stillframe2");
+  const gapStill = document.getElementById("gapStillframe");
   const v1 = document.getElementById("video1");
   const vGap = document.getElementById("gapVideo");
   const v2 = document.getElementById("video2");
 
   const visuals = [
-    { el: still1, start: 0, end: 0 },     // to be updated
+    { el: still1, start: 0, end: 0 },
     { el: v1, start: 0, end: 0 },
+    { el: gapStill, start: 0, end: 0 },
     { el: vGap, start: 0, end: 0 },
     { el: v2, start: 0, end: 0 },
     { el: still2, start: 0, end: 0 }
   ];
 
   function hideAll() {
-    [still1, still2, v1, vGap, v2].forEach(el => {
+    [still1, still2, gapStill, v1, vGap, v2].forEach(el => {
       el.style.display = "none";
       if (el.tagName === "VIDEO") {
         el.pause();
@@ -69,57 +72,65 @@ document.getElementById("playButton").addEventListener("click", async function (
   hideAll();
 
   try {
+    // Load and parse CSV
     const response = await fetch("audio_files.csv");
     if (!response.ok) throw new Error("CSV file not found");
-
     const text = await response.text();
-    const lines = text.trim().split("\n");
-    const rows = lines.slice(1).map(line => line.split(","));
+    const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+    if (rows.length === 0) throw new Error("No valid audio rows found");
 
-    if (rows.length === 0) throw new Error("No valid audio entries");
-
-    const randomRow = rows[Math.floor(Math.random() * rows.length)];
-    const [filename, original, gap, testAudio, total] = randomRow.map(x => x.trim());
-
-    const audioURL = filename;
+    const [filename, original, gap, testAudio] = rows[Math.floor(Math.random() * rows.length)];
     const originalSec = parseFloat(original);
     const gapSec = parseFloat(gap);
     const testSec = parseFloat(testAudio);
-    const totalSec = parseFloat(total);
+    const audioURL = filename;
 
-    const preGapSec = (totalSec - originalSec - gapSec) / 2;
-    const video1Sec = testSec / 2;
-    const video2Sec = testSec / 2;
-    const postGapSec = preGapSec;
+    // Load videos to get actual durations
+    await Promise.all([
+      v1.play().then(() => v1.pause()),
+      vGap.play().then(() => vGap.pause()),
+      v2.play().then(() => v2.pause())
+    ]);
 
-    // Set visual segment timings
-    visuals[0].start = 0;
-    visuals[0].end = preGapSec;
+    const video1Sec = v1.duration;
+    const gapVideoSec = vGap.duration;
+    const video2Sec = v2.duration;
+    const preStillSec = originalSec - video1Sec;
+    const postStillSec = testSec;
 
-    visuals[1].start = visuals[0].end;
-    visuals[1].end = visuals[1].start + video1Sec;
+    // Assign timing
+    let t = 0;
+    visuals[0].start = t;
+    visuals[0].end = t += preStillSec;
 
-    visuals[2].start = visuals[1].end;
-    visuals[2].end = visuals[2].start + gapSec;
+    visuals[1].start = t;
+    visuals[1].end = t += video1Sec;
 
-    visuals[3].start = visuals[2].end;
-    visuals[3].end = visuals[3].start + video2Sec;
+    visuals[2].start = t;
+    visuals[2].end = t += gapSec;
 
-    visuals[4].start = visuals[3].end;
-    visuals[4].end = visuals[4].start + postGapSec;
+    visuals[3].start = t;
+    visuals[3].end = t += gapVideoSec;
+
+    visuals[4].start = t;
+    visuals[4].end = t += video2Sec;
+
+    visuals[5].start = t;
+    visuals[5].end = t += postStillSec;
+
+    const totalSec = visuals[5].end;
 
     // Prepare audio
     audio.src = audioURL;
     await new Promise((resolve, reject) => {
       audio.oncanplaythrough = resolve;
-      audio.onerror = () => reject("Failed to load audio file: " + audioURL);
+      audio.onerror = () => reject("Audio failed to load: " + audioURL);
     });
 
-    // Sync loop
+    // Sync visuals with audio
     let currentVisual = null;
     function updateVisuals() {
       const t = audio.currentTime;
-
       for (const v of visuals) {
         if (t >= v.start && t < v.end) {
           if (currentVisual !== v.el) {
@@ -131,12 +142,11 @@ document.getElementById("playButton").addEventListener("click", async function (
           break;
         }
       }
-
       if (t < totalSec) {
         requestAnimationFrame(updateVisuals);
       } else {
-        hideAll(); // End
-        console.log("Sequence done.");
+        hideAll();
+        console.log("Sequence complete.");
       }
     }
 
@@ -145,7 +155,7 @@ document.getElementById("playButton").addEventListener("click", async function (
 
   } catch (err) {
     console.error("Sync error:", err);
-    alert("Failed to play synced media. Check console for details.");
+    alert("Error playing synced sequence. See console for details.");
   }
 });
 </script>
