--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <script src="jspsych.js"></script>
+  <meta charset="UTF-8">
+  <title>Synced Stimuli Presentation</title>
   <link href="jspsych.css" rel="stylesheet" />
+  <script src="jspsych.js"></script>
   <style>
     body {
       text-align: center;
@@ -164,3 +166,4 @@
 
 </body>
 </html>
+
