--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Synced Stimuli Presentation</title>
-  <link href="jspsych.css" rel="stylesheet" />
   <script src="jspsych.js"></script>
+  <link href="jspsych.css" rel="stylesheet" />
   <style>
     body {
       text-align: center;
-      background-color: #f0f0f0;
       padding-top: 50px;
+      background-color: #f0f0f0;
     }
     #visual-container {
       width: 800px;
@@ -29,140 +27,138 @@
 </head>
 <body>
 
-  <div id="visual-container">
-    <img id="stillframe1" src="stillframe1.png" />
-    <img id="gapStillframe" src="gapStillframe.png" />
-    <img id="stillframe2" src="stillframe2.png" />
-    <video id="video1" src="video1.mp4" preload="auto" playsinline muted></video>
-    <video id="gapVideo" src="gapVideo.mp4" preload="auto" playsinline muted></video>
-    <video id="video2" src="video2.mp4" preload="auto" playsinline muted></video>
-  </div>
+<div id="visual-container">
+  <img id="stillframe1" src="stillframe1.png" />
+  <img id="gapStillframe" src="gapStillframe.png" />
+  <img id="stillframe2" src="stillframe2.png" />
+  <video id="video1" src="video1.mp4" playsinline preload="auto" muted></video>
+  <video id="gapVideo" src="gapVideo.mp4" playsinline preload="auto" muted></video>
+  <video id="video2" src="video2.mp4" playsinline preload="auto" muted></video>
+</div>
 
-  <audio id="myAudio" hidden preload="auto"></audio>
-  <br>
-  <button id="playButton">Play Synced Stimuli</button>
+<audio id="myAudio" hidden preload="auto"></audio>
+<br />
+<button id="playButton">Play Synced Stimuli</button>
 
-  <script>
-    document.getElementById("playButton").addEventListener("click", async () => {
-      const audio = document.getElementById("myAudio");
-      const still1 = document.getElementById("stillframe1");
-      const still2 = document.getElementById("stillframe2");
-      const gapStill = document.getElementById("gapStillframe");
-      const v1 = document.getElementById("video1");
-      const vGap = document.getElementById("gapVideo");
-      const v2 = document.getElementById("video2");
+<script>
+document.getElementById("playButton").addEventListener("click", async function () {
+  const audio = document.getElementById("myAudio");
+  const still1 = document.getElementById("stillframe1");
+  const still2 = document.getElementById("stillframe2");
+  const gapStill = document.getElementById("gapStillframe");
+  const v1 = document.getElementById("video1");
+  const vGap = document.getElementById("gapVideo");
+  const v2 = document.getElementById("video2");
 
-      const visuals = [
-        { el: still1 },
-        { el: v1 },
-        { el: gapStill },
-        { el: vGap },
-        { el: v2 },
-        { el: still2 }
-      ];
+  const visuals = [
+    { el: still1, start: 0, end: 0 },
+    { el: v1, start: 0, end: 0 },
+    { el: gapStill, start: 0, end: 0 },
+    { el: vGap, start: 0, end: 0 },
+    { el: v2, start: 0, end: 0 },
+    { el: still2, start: 0, end: 0 }
+  ];
 
-      function hideAll() {
-        visuals.forEach(v => {
-          v.el.style.display = "none";
-          if (v.el.tagName === "VIDEO") {
-            v.el.pause();
-            v.el.currentTime = 0;
-          }
-        });
-      }
-
-      hideAll();
-
-      try {
-        // Load audio and timing info from CSV
-        const response = await fetch("audio_files.csv");
-        if (!response.ok) throw new Error("CSV not found.");
-        const csvText = await response.text();
-        const rows = csvText.trim().split("\n").slice(1).map(line => line.split(",").map(cell => cell.trim()));
-        if (rows.length === 0) throw new Error("CSV contains no data.");
-
-        const [audioFile, originalDur, gapDur, testDur] = rows[Math.floor(Math.random() * rows.length)];
-        const original = parseFloat(originalDur);
-        const gap = parseFloat(gapDur);
-        const test = parseFloat(testDur);
-
-        if (isNaN(original) || isNaN(gap) || isNaN(test)) throw new Error("Invalid timing values in CSV.");
-
-        // Wait for video metadata to load
-        await Promise.all([
-          new Promise(res => v1.onloadedmetadata = res),
-          new Promise(res => vGap.onloadedmetadata = res),
-          new Promise(res => v2.onloadedmetadata = res)
-        ]);
-
-        const v1Dur = v1.duration;
-        const vGapDur = vGap.duration;
-        const v2Dur = v2.duration;
-        const still1Dur = original - v1Dur;
-
-        if (still1Dur < 0) throw new Error("original duration must be greater than video1 duration");
-
-        // Set timings
-        let t = 0;
-        visuals[0].start = t;
-        visuals[0].end = t += still1Dur;
-
-        visuals[1].start = t;
-        visuals[1].end = t += v1Dur;
-
-        visuals[2].start = t;
-        visuals[2].end = t += gap;
-
-        visuals[3].start = t;
-        visuals[3].end = t += vGapDur;
-
-        visuals[4].start = t;
-        visuals[4].end = t += v2Dur;
-
-        visuals[5].start = t;
-        visuals[5].end = t += test;
-
-        const totalTime = visuals[5].end;
-
-        // Load and play audio
-        audio.src = audioFile;
-        await new Promise((resolve, reject) => {
-          audio.oncanplaythrough = resolve;
-          audio.onerror = () => reject("Audio failed to load.");
-        });
-
-        // Sync display to audio time
-        let current = null;
-        function syncVisuals() {
-          const now = audio.currentTime;
-          for (const v of visuals) {
-            if (now >= v.start && now < v.end) {
-              if (current !== v.el) {
-                hideAll();
-                v.el.style.display = "block";
-                if (v.el.tagName === "VIDEO") v.el.play();
-                current = v.el;
-              }
-              break;
-            }
-          }
-          if (now < totalTime) {
-            requestAnimationFrame(syncVisuals);
-          } else {
-            hideAll();
-            console.log("Playback finished.");
-          }
-        }
-
-        await audio.play();
-        syncVisuals();
-
-      } catch (err) {
-        console.error("Error:", err);
-        alert("Error syncing media. Check console for details.");
+  function hideAll() {
+    [still1, still2, gapStill, v1, vGap, v2].forEach(el => {
+      el.style.display = "none";
+      if (el.tagName === "VIDEO") {
+        el.pause();
+        el.currentTime = 0;
       }
     });
-  </script>
+  }
+
+  hideAll();
+
+  try {
+    // Load and parse CSV
+    const response = await fetch("audio_files.csv");
+    if (!response.ok) throw new Error("CSV file not found");
+    const text = await response.text();
+    const rows = text.trim().split("\n").slice(1).map(r => r.split(",").map(x => x.trim()));
+    if (rows.length === 0) throw new Error("No valid audio rows found");
+
+    const [filename, original, gap, testAudio] = rows[Math.floor(Math.random() * rows.length)];
+    const originalSec = parseFloat(original);
+    const gapSec = parseFloat(gap);
+    const testSec = parseFloat(testAudio);
+    const audioURL = filename;
+
+    // Load videos to get actual durations
+    await Promise.all([
+      v1.play().then(() => v1.pause()),
+      vGap.play().then(() => vGap.pause()),
+      v2.play().then(() => v2.pause())
+    ]);
+
+    const video1Sec = v1.duration;
+    const gapVideoSec = vGap.duration;
+    const video2Sec = v2.duration;
+    const preStillSec = originalSec - video1Sec;
+    const postStillSec = testSec;
+
+    // Assign timing
+    let t = 0;
+    visuals[0].start = t;
+    visuals[0].end = t += preStillSec;
+
+    visuals[1].start = t;
+    visuals[1].end = t += video1Sec;
+
+    visuals[2].start = t;
+    visuals[2].end = t += gapSec;
+
+    visuals[3].start = t;
+    visuals[3].end = t += gapVideoSec;
+
+    visuals[4].start = t;
+    visuals[4].end = t += video2Sec;
+
+    visuals[5].start = t;
+    visuals[5].end = t += postStillSec;
+
+    const totalSec = visuals[5].end;
+
+    // Prepare audio
+    audio.src = audioURL;
+    await new Promise((resolve, reject) => {
+      audio.oncanplaythrough = resolve;
+      audio.onerror = () => reject("Audio failed to load: " + audioURL);
+    });
+
+    // Sync visuals with audio
+    let currentVisual = null;
+    function updateVisuals() {
+      const t = audio.currentTime;
+      for (const v of visuals) {
+        if (t >= v.start && t < v.end) {
+          if (currentVisual !== v.el) {
+            hideAll();
+            v.el.style.display = "block";
+            if (v.el.tagName === "VIDEO") v.el.play();
+            currentVisual = v.el;
+          }
+          break;
+        }
+      }
+      if (t < totalSec) {
+        requestAnimationFrame(updateVisuals);
+      } else {
+        hideAll();
+        console.log("Sequence complete.");
+      }
+    }
+
+    await audio.play();
+    updateVisuals();
+
+  } catch (err) {
+    console.error("Sync error:", err);
+    alert("Error playing synced sequence. See console for details.");
+  }
+});
+</script>
 
 </body>
 </html>
